--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
